2005-02-25  Lars Gullik Bjonnes  <larsbj@gullik.net>

	* Makefile.am (CLEANFILES): clean generated files

2005-02-17  Angus Leeming  <leeming@lyx.org>

	* copy.C (copy): Pass the ios::in flag to the ifstream constructor.
	Enables copying to work when the code is compiled with the gcc 2.95
	compiler and stdlib.

2005-02-15  Angus Leeming  <leeming@lyx.org>

	* environment.C: add missing #include.
	(setEnvPath): compare iterators rather than use tellp().

2005-02-15  Angus Leeming  <leeming@lyx.org>

	* environment.[Ch]: new files. Move the environment setter/getter
	functions here from filetools.[Ch]. In the process:
	rename GetEnv as getEnv.
	rename putEnv as setEnv. Change the signature of the function
	to take a pair of arguments (a name and a value) rather than the
	existing coded "name=value" single argument. Merge the putenv.C
	code into setEnv.

	* lyxlib.h (putenv): remove declaration.
	* putenv.C: removed.

	* Makefile.am: add environment.[Ch]. Remove putenv.C.

	* filetools.[Ch]: remove environment setter/getter functions.

	* os_os2.C (init): s/GetEnvPath/getEnvPath/. Left over from an
	earlier change.

	* package.C.in (get_home_dir, extract_env_var_dir):
	* userinfo.C (user_email): s/GetEnv/getEnv/.

2005-02-03  Angus Leeming  <leeming@lyx.org>

	* forkedcall.C (running): call the lyx::kill wrapper function
	rather than the system kill.

2005-02-02  Angus Leeming  <leeming@lyx.org>

	* forkedcall.C (generateChild): overhaul the code to split a string
	into an argv array of words. Now respects simple quoting reasonably
	well.

2005-02-01  Angus Leeming  <leeming@lyx.org>

	* fs_extras.C: #include <windows.h>

2005-01-31  Angus Leeming  <leeming@lyx.org>

	* package.[Ch] (init_package, c-tor): define and use an enum to
	specify explicitly the location of the top level build directory
	when the executable is run in-place.

2005-01-31  Lars Gullik Bjonnes  <larsbj@gullik.net>

	* fs_extras.C: add changes from Asger's Win32 patch.
